--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: go
 
 go:
   - 1.8
-  - master
+
 install:
-  - go get -v github.com/Masterminds/glide
-  - cd $GOPATH/src/github.com/Masterminds/glide && git checkout tags/0.10.2 && go install && cd -
-  - glide install
-  script:
+   - go get github.com/Masterminds/glide
+   - glide install
+
+script:
     - go build
