--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,6 +1,6 @@
 FROM golang:latest
 
-ENV PROJECT /go/src/github.com/amitm1/go-microsvc-skel
+ENV PROJECT /go/src/github.com/amitm1/go-service
 RUN curl https://glide.sh/get | sh
 
 RUN mkdir -p $PROJECT
